Resolves: tdf#89231 if no font has 0x202F fallback to a normal space

Change-Id: I2325c0b09ccf66ee15597251ad027b295de5502f
(cherry picked from commit f76ecc3e9ce51b35fc18db55b808270079a3652b)