vcl/generic/glyphs/gcach_layout.cxx
@@ -445,6 +445,12 @@ bool HbLayoutEngine::layout(ServerFontLayout& rLayout, ImplLayoutArgs& rArgs)
                 int32_t nGlyphIndex = pHbGlyphInfos[i].codepoint;
                 int32_t nCharPos = pHbGlyphInfos[i].cluster;
 
+                // tdf#89231 if it's just a missing non-breaking space, then use a normal space
+                if (!nGlyphIndex && (SalLayoutFlags::ForFallback & rArgs.mnFlags) && nCharPos >= 0 && rArgs.mpStr[nCharPos] == 0x202F)
+                {
+                    nGlyphIndex = rFont.GetGlyphIndex(' ');
+                }
+
                 // if needed request glyph fallback by updating LayoutArgs
                 if (!nGlyphIndex)
                 {
