vcl/source/outdev/font.cxx
@@ -2104,7 +2104,10 @@ SalLayout* OutputDevice::ImplGlyphFallbackLayout( SalLayout* pSalLayout, ImplLay
         if( nFallbackLevel < MAX_FALLBACK-1)
         {
             // ignore fallback font if it is the same as the original font
-            if( mpFontEntry->maFontSelData.mpFontData == aFontSelData.mpFontData )
+            // unless we are looking for a substituion for 0x202F, in which
+            // case we'll just use a normal space
+            if( mpFontEntry->maFontSelData.mpFontData == aFontSelData.mpFontData &&
+                aMissingCodes.indexOf(0x202F) == -1 )
             {
                 mpFontCache->Release( pFallbackFont );
                 continue;
